# SurveyScanner

./: .gitignore  CMakeLists.txt  README.md  SurveyScanner.cmake.in  SurveyScanner.pc.in  SurveyScannerConfig.cmake.in  SurveyScannerConfigVersion.cmake.in
data/: config.yaml  configReal.yaml
include/: SurveyScanner.h
src/: SurveyScanner.cpp
